@@ -26,7 +26,31 @@
 #ifdef Q_OS_UNIX
 
 namespace unixhelper {
+  /*
+   * TODO: Unblocks all signals and
+   * installs a signal handler for SIGHUP, which calls kill_pgroup.
+   *
+   * TODO: Should signal unblocking or
+   * installing the signal handler fail, an emergency exit is performed
+   * and the whole process group killed.
+   *
+   * Loops indefinitely afterwards.
+   */
   int unix_cleanup ();
+
+  /*
+   * Kills the whole process group.
+   * First, SIGTERM is sent to the group.
+   * A 5 seconds grace period is granted to make sure
+   * processes exit cleanly on their own.
+   * Lastly, SIGKILL is sent to the group -- which also
+   * implies the demise of this program.
+   *
+   * signal may be any of:
+   *   * -1       to indicate an error leading to emergency termination
+   *   * SIGHUP   as the standard signal that is sent when the
+   *              group leeader dies
+   */
   void kill_pgroup (int signal);
 }
 
